# risc-v

./: .gitignore  CMakeLists.txt  mqtt_bridge.py  robot_core.service  start_robot.sh
scripts/: agv_master_node.py  agv_voice_smart_home.py  air_sensor.py  arm_grabber.py  arm_serial_driver.py  fix_urdf.py  jarvis_node.py  main_api_tts.py  main_api_tts_angle.py  mqtt_to_ros2_bridge.py  node_air_sensor.py  node_esp32_mqtt.py  qt.py  ui_dashboard.py  voice_commander.py
src/: ROS2-V5.0(humble)常用指令.txt
src/agv-ai-pipeline/: README.md  README_cn.md  agv_common_class.py  agv_master_node.py  agv_rotate_node.py
src/agv-ai-pipeline/bash/: start_angle_nav.sh  start_follow.sh  start_jobot.sh  start_lidar.sh  start_mic.sh  start_nav2.sh  start_ros.sh
src/agv-ai-pipeline/spacemit_audio/: __init__.py  device_find.py  ollama.sh  record_loop.py  requirements.txt
src/agv-ai-pipeline/spacemit_audio/models/: utils.py
src/agv-ai-pipeline/spacemit_llm/: comm_model.py
src/agv-ai-pipeline/test/: agv_test_function.py  odom_test.py  play_test.py  pyaudio_test.py  record_test.py
src/agv-ai-pipeline/tools/agv/: README.md  __init__.py  agv_function_map.py  agv_function_node.py  agv_function_notes.json  common.py
src/agv_mec/jobot_mic/: CMakeLists.txt  package.xml
src/agv_mec/jobot_mic/src/: com_test.cpp  main.cpp  main_backup.cpp  record.cpp  record.h
src/agv_mec/turn_on_wheeltec_robot/: CMakeLists.txt  my_udev.sh  wheeltec_udev.sh
src/agv_mec/turn_on_wheeltec_robot/config/: ekf2.yaml
src/agv_mec/turn_on_wheeltec_robot/launch/: base_serial.launch.py  robot_mode_description_minibot.launch.py  turn_on_robot_no_lidar.launch.py  turn_on_wheeltec_robot.launch.py  turn_on_wheeltec_robot_mic.launch.py  wheeltec_ekf.launch.py  wheeltec_lidar.launch.py  wheeltec_sensors.launch.py
src/agv_mec/turn_on_wheeltec_robot/src/: wheeltec_robot.cpp
src/agv_mec/wheeltec_robot_nav2/behavior_trees/: follow_point.xml
src/agv_mec/wheeltec_robot_nav2/launch/: bringup_launch_for_slam.py  wheeltec_nav2.launch.py  wheeltec_nav2_follow_point.launch.py  wheeltec_nav2_for_slam.launch.py
src/agv_mec/wheeltec_robot_nav2/map/: WHEELTEC.pgm  spacemit0506.pgm  spacemit0506.yaml  spacemit0508.pgm  spacemit0508.yaml  spacemit0509.pgm  spacemit0509.yaml  spacemit0520.pgm  spacemit0520.yaml  spacemit0521.pgm  spacemit0521.yaml  spacemit0522.pgm  spacemit0522.yaml  spacemit1.pgm  spacemit1.yaml  spacemit_test.pgm  spacemit_test.yaml
src/agv_mec/ydlidar_ros2_driver/launch/: ydlidar_launch.py
src/arm_moveit_config/: .setup_assistant  package.xml
src/arm_moveit_config/config/: joint_limits.yaml  ros2_controllers.yaml  table_streeing_arm.srdf
src/arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/auto_recharge_ros2/: Charger_Position.json  robot_info.yaml
src/interfaces/: CMakeLists.txt  package.xml
src/largemodel/: largemodel.service  package.xml  readme.md  setup.py
src/largemodel/config/: map_mapping copy.yaml  map_mapping.yaml  model_config.yaml  param.yaml
src/largemodel/largemodel/: action_service.py  model_service.py
src/largemodel/launch/: largemodel_control.launch.py
src/largemodel/resources_file/: qwen3-vl-2d.py
src/my_robot_bringup/: package.xml  setup.py
src/my_robot_bringup/launch/: start_all.launch.py
src/ollama_ros_chat-ros2/: readme.md
src/project/: CMakeLists.txt  best.q.onnx  fast_radar  main.cpp  ultimate_radar
src/rvv_lidar_accelerator/: CMakeLists.txt  package.xml
src/rvv_lidar_accelerator/src/: rvv_processor.cpp
src/simple_follower_ros2/: setup.py
src/simple_follower_ros2/launch/: radar_follower.launch.py  radar_tracker.launch.py
src/simple_follower_ros2/simple_follower_ros2/: ar_follow.py  laserTracker.py  laserfollower.py  line_follow.py  line_follow_model.py  radarTracker.py  radarfollower.py  radarkeyboard.py
src/stepper_arm/: CMakeLists.txt  package.xml
src/stepper_arm/config/: auto_pick_colorBlock.yaml
src/stepper_arm/launch/: arm_2_auto_pick_colorBlock.launch.py
src/stepper_arm/src/: arm_2_keyboard_control.cpp  auto_pick_colorBlock.cpp  car_avoidance.cpp  stepper_motor_arm.cpp
src/table_streeing_arm/: CMakeLists.txt  package.xml
src/table_streeing_arm/urdf/: table_streeing_arm.urdf
src/temp_libs/: libopencv_calib3d.so.4.14.0  libopencv_core.so.4.14.0  libopencv_features2d.so.4.14.0  libopencv_flann.so.4.14.0  libopencv_highgui.so.4.14.0  libopencv_imgcodecs.so.4.14.0  libopencv_imgproc.so.4.14.0  libopencv_ml.so.4.14.0  libopencv_objdetect.so.4.14.0  libopencv_photo.so.4.14.0  libopencv_stitching.so.4.14.0  libopencv_video.so.4.14.0  libopencv_videoio.so.4.14.0
src/turn_on_wheeltec_robot/: wheeltec_udev.sh
src/turn_on_wheeltec_robot/config/: ekf.yaml  robot_model.yaml  wheeltec_param.yaml
src/turn_on_wheeltec_robot/launch/: base_serial.launch.py  robot_mode_description.launch.py  turn_on_wheeltec_robot.launch.py  wheeltec_ekf.launch.py
src/turn_on_wheeltec_robot/src/: wheeltec_robot.cpp
src/wheeltec_arm_grasp/: package.xml  setup.cfg  setup.py
src/wheeltec_arm_grasp/config/: arm_params.yaml  camera_to_arm_tf.yaml
src/wheeltec_arm_grasp/launch/: arm_grasp.launch.py
src/wheeltec_arm_grasp/wheeltec_arm_grasp/: __init__.py  arm_grasp_node.py  grasp_sequencer.py  ik_solver.py  serial_protocol.py  tf_manager.py
src/wheeltec_imu/fdilink_ahrs_ros-ros2/: readme.md
src/wheeltec_imu/hipnuc_imu_ros-ros2/: Readme.md
src/wheeltec_robot_kcf/: CMakeLists.txt
src/wheeltec_robot_kcf/src/: run_tracker_model.cpp
src/wheeltec_robot_nav2/launch/: bringup_launch.py  save_map.launch.py  wheeltec_nav2.launch.py
src/wheeltec_robot_nav2/map/: WHEELTEC.pgm  WHEELTEC.yaml
src/wheeltec_robot_rtab/launch/: rtabmap_localization.launch.py  rtabmap_localization_pure3d.launch.py  wheeltec_nav2_rtab.launch.py  wheeltec_nav2_rtab_pure3d.launch.py
src/yolov8_ros2/: CMakeLists.txt  main.cpp  package.xml  yolov8.cc  yolov8.h
src/yolov8_ros2/model/: best.q.onnx
(+66 files in other folders)
