<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>table_streeing_arm</name>
  <version>0.0.0</version>
  <description>The table_streeing_arm URDF package</description>
  <maintainer email="zyc@todo.todo">zyc</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>